fixed wrapping in overview

--- a/web/static/css/projekte.css
+++ b/web/static/css/projekte.css
@@ -96,6 +96,10 @@
     min-width: 100px;
 }
 
+.overview_project_name {
+    padding-top: 1rem;
+}
+
 .project_grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -115,6 +119,9 @@
     margin-bottom: 1rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     padding-left: 1rem;
+    flex-wrap: wrap;
+    word-break: break-all;
+    align-content: flex-start;
 }
 
 .footer {
